Compiladores/2019-1/Parcial/p2.output
Estado 55 conflictos: 6 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: INICIO creacion_clase metodo_main FINAL

    2 permiso: PUBLICO
    3        | PRIVADO
    4        | PROTEGIDO

    5 creacion_clase: creacion_clase permiso ID '{' clase_estructura '}'
    6               | creacion_clase permiso ID HEREDAR ID '{' clase_estructura '}'
    7               | %empty

    8 clase_estructura: clase_estructura atributos
    9                 | clase_estructura metodo
   10                 | %empty

   11 atributos: permiso declarar

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

   13 parametros: tipo ID ',' parametros
   14           | tipo ID

   15 estructura_metodo: estructura_metodo declarar
   16                  | estructura_metodo crear_objeto
   17                  | estructura_metodo crear_metodo_objeto
   18                  | %empty

   19 tipo: INT
   20     | CHAR
   21     | STRING
   22     | BOOL
   23     | LONG
   24     | FLOAT

   25 crear_objeto: tipo ID IGUAL NUEVO ID '(' parametros_objeto ')' PUNTCOM

   26 crear_metodo_objeto: ID '.' ID '(' parametros_objeto ')'

   27 parametros_objeto: valor ',' parametros_objeto
   28                  | valor
   29                  | %empty

   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' estructura_metodo '}' RETURN ID

   31 valor: ID
   32      | NUM
   33      | ID '.' ID

   34 declarar: declarar tipo ID IGUAL valor PUNTCOM
   35         | declarar tipo ID PUNTCOM
   36         | ','


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 12 25 26 30
')' (41) 12 25 26 30
',' (44) 13 27 36
'.' (46) 26 33
'{' (123) 5 6 12 30
'}' (125) 5 6 12 30
error (256)
INICIO (258) 1
FINAL (259) 1
HEREDAR (260) 6
MAIN (261) 30
PRIVADO (262) 3
PUBLICO (263) 2
PROTEGIDO (264) 4
PUNTCOM (265) 12 25 34 35
ID (266) 5 6 12 13 14 25 26 30 31 33 34 35
NUM (267) 32
IGUAL (268) 25 34
NUEVO (269) 25
INT (270) 19
FLOAT (271) 24
LONG (272) 23
CHAR (273) 20
STRING (274) 21
BOOL (275) 22
RETURN (276) 12 30


No terminales con las reglas donde aparecen

$accept (28)
    en la izquierda: 0
programa (29)
    en la izquierda: 1, en la derecha: 0
permiso (30)
    en la izquierda: 2 3 4, en la derecha: 5 6 11 12 30
creacion_clase (31)
    en la izquierda: 5 6 7, en la derecha: 1 5 6
clase_estructura (32)
    en la izquierda: 8 9 10, en la derecha: 5 6 8 9
atributos (33)
    en la izquierda: 11, en la derecha: 8
metodo (34)
    en la izquierda: 12, en la derecha: 9
parametros (35)
    en la izquierda: 13 14, en la derecha: 12 13 30
estructura_metodo (36)
    en la izquierda: 15 16 17 18, en la derecha: 12 15 16 17 30
tipo (37)
    en la izquierda: 19 20 21 22 23 24, en la derecha: 12 13 14 25
    30 34 35
crear_objeto (38)
    en la izquierda: 25, en la derecha: 16
crear_metodo_objeto (39)
    en la izquierda: 26, en la derecha: 17
parametros_objeto (40)
    en la izquierda: 27 28 29, en la derecha: 25 26 27
metodo_main (41)
    en la izquierda: 30, en la derecha: 1
valor (42)
    en la izquierda: 31 32 33, en la derecha: 27 28 34
declarar (43)
    en la izquierda: 34 35 36, en la derecha: 11 15 34 35


Estado 0

    0 $accept: . programa $end

    INICIO  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: INICIO . creacion_clase metodo_main FINAL

    $default  reduce usando la regla 7 (creacion_clase)

    creacion_clase  ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: INICIO creacion_clase . metodo_main FINAL
    5 creacion_clase: creacion_clase . permiso ID '{' clase_estructura '}'
    6               | creacion_clase . permiso ID HEREDAR ID '{' clase_estructura '}'

    PRIVADO    desplazar e ir al estado 5
    PUBLICO    desplazar e ir al estado 6
    PROTEGIDO  desplazar e ir al estado 7

    permiso      ir al estado 8
    metodo_main  ir al estado 9


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    3 permiso: PRIVADO .

    $default  reduce usando la regla 3 (permiso)


Estado 6

    2 permiso: PUBLICO .

    $default  reduce usando la regla 2 (permiso)


Estado 7

    4 permiso: PROTEGIDO .

    $default  reduce usando la regla 4 (permiso)


Estado 8

    5 creacion_clase: creacion_clase permiso . ID '{' clase_estructura '}'
    6               | creacion_clase permiso . ID HEREDAR ID '{' clase_estructura '}'
   30 metodo_main: permiso . tipo MAIN '(' parametros ')' '{' estructura_metodo '}' RETURN ID

    ID      desplazar e ir al estado 10
    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    tipo  ir al estado 17


Estado 9

    1 programa: INICIO creacion_clase metodo_main . FINAL

    FINAL  desplazar e ir al estado 18


Estado 10

    5 creacion_clase: creacion_clase permiso ID . '{' clase_estructura '}'
    6               | creacion_clase permiso ID . HEREDAR ID '{' clase_estructura '}'

    HEREDAR  desplazar e ir al estado 19
    '{'      desplazar e ir al estado 20


Estado 11

   19 tipo: INT .

    $default  reduce usando la regla 19 (tipo)


Estado 12

   24 tipo: FLOAT .

    $default  reduce usando la regla 24 (tipo)


Estado 13

   23 tipo: LONG .

    $default  reduce usando la regla 23 (tipo)


Estado 14

   20 tipo: CHAR .

    $default  reduce usando la regla 20 (tipo)


Estado 15

   21 tipo: STRING .

    $default  reduce usando la regla 21 (tipo)


Estado 16

   22 tipo: BOOL .

    $default  reduce usando la regla 22 (tipo)


Estado 17

   30 metodo_main: permiso tipo . MAIN '(' parametros ')' '{' estructura_metodo '}' RETURN ID

    MAIN  desplazar e ir al estado 21


Estado 18

    1 programa: INICIO creacion_clase metodo_main FINAL .

    $default  reduce usando la regla 1 (programa)


Estado 19

    6 creacion_clase: creacion_clase permiso ID HEREDAR . ID '{' clase_estructura '}'

    ID  desplazar e ir al estado 22


Estado 20

    5 creacion_clase: creacion_clase permiso ID '{' . clase_estructura '}'

    $default  reduce usando la regla 10 (clase_estructura)

    clase_estructura  ir al estado 23


Estado 21

   30 metodo_main: permiso tipo MAIN . '(' parametros ')' '{' estructura_metodo '}' RETURN ID

    '('  desplazar e ir al estado 24


Estado 22

    6 creacion_clase: creacion_clase permiso ID HEREDAR ID . '{' clase_estructura '}'

    '{'  desplazar e ir al estado 25


Estado 23

    5 creacion_clase: creacion_clase permiso ID '{' clase_estructura . '}'
    8 clase_estructura: clase_estructura . atributos
    9                 | clase_estructura . metodo

    PRIVADO    desplazar e ir al estado 5
    PUBLICO    desplazar e ir al estado 6
    PROTEGIDO  desplazar e ir al estado 7
    '}'        desplazar e ir al estado 26

    permiso    ir al estado 27
    atributos  ir al estado 28
    metodo     ir al estado 29


Estado 24

   30 metodo_main: permiso tipo MAIN '(' . parametros ')' '{' estructura_metodo '}' RETURN ID

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    parametros  ir al estado 30
    tipo        ir al estado 31


Estado 25

    6 creacion_clase: creacion_clase permiso ID HEREDAR ID '{' . clase_estructura '}'

    $default  reduce usando la regla 10 (clase_estructura)

    clase_estructura  ir al estado 32


Estado 26

    5 creacion_clase: creacion_clase permiso ID '{' clase_estructura '}' .

    $default  reduce usando la regla 5 (creacion_clase)


Estado 27

   11 atributos: permiso . declarar
   12 metodo: permiso . tipo ID '(' parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16
    ','     desplazar e ir al estado 33

    tipo      ir al estado 34
    declarar  ir al estado 35


Estado 28

    8 clase_estructura: clase_estructura atributos .

    $default  reduce usando la regla 8 (clase_estructura)


Estado 29

    9 clase_estructura: clase_estructura metodo .

    $default  reduce usando la regla 9 (clase_estructura)


Estado 30

   30 metodo_main: permiso tipo MAIN '(' parametros . ')' '{' estructura_metodo '}' RETURN ID

    ')'  desplazar e ir al estado 36


Estado 31

   13 parametros: tipo . ID ',' parametros
   14           | tipo . ID

    ID  desplazar e ir al estado 37


Estado 32

    6 creacion_clase: creacion_clase permiso ID HEREDAR ID '{' clase_estructura . '}'
    8 clase_estructura: clase_estructura . atributos
    9                 | clase_estructura . metodo

    PRIVADO    desplazar e ir al estado 5
    PUBLICO    desplazar e ir al estado 6
    PROTEGIDO  desplazar e ir al estado 7
    '}'        desplazar e ir al estado 38

    permiso    ir al estado 27
    atributos  ir al estado 28
    metodo     ir al estado 29


Estado 33

   36 declarar: ',' .

    $default  reduce usando la regla 36 (declarar)


Estado 34

   12 metodo: permiso tipo . ID '(' parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

    ID  desplazar e ir al estado 39


Estado 35

   11 atributos: permiso declarar .
   34 declarar: declarar . tipo ID IGUAL valor PUNTCOM
   35         | declarar . tipo ID PUNTCOM

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    $default  reduce usando la regla 11 (atributos)

    tipo  ir al estado 40


Estado 36

   30 metodo_main: permiso tipo MAIN '(' parametros ')' . '{' estructura_metodo '}' RETURN ID

    '{'  desplazar e ir al estado 41


Estado 37

   13 parametros: tipo ID . ',' parametros
   14           | tipo ID .

    ','  desplazar e ir al estado 42

    $default  reduce usando la regla 14 (parametros)


Estado 38

    6 creacion_clase: creacion_clase permiso ID HEREDAR ID '{' clase_estructura '}' .

    $default  reduce usando la regla 6 (creacion_clase)


Estado 39

   12 metodo: permiso tipo ID . '(' parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

    '('  desplazar e ir al estado 43


Estado 40

   34 declarar: declarar tipo . ID IGUAL valor PUNTCOM
   35         | declarar tipo . ID PUNTCOM

    ID  desplazar e ir al estado 44


Estado 41

   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' . estructura_metodo '}' RETURN ID

    $default  reduce usando la regla 18 (estructura_metodo)

    estructura_metodo  ir al estado 45


Estado 42

   13 parametros: tipo ID ',' . parametros

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    parametros  ir al estado 46
    tipo        ir al estado 31


Estado 43

   12 metodo: permiso tipo ID '(' . parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    parametros  ir al estado 47
    tipo        ir al estado 31


Estado 44

   34 declarar: declarar tipo ID . IGUAL valor PUNTCOM
   35         | declarar tipo ID . PUNTCOM

    PUNTCOM  desplazar e ir al estado 48
    IGUAL    desplazar e ir al estado 49


Estado 45

   15 estructura_metodo: estructura_metodo . declarar
   16                  | estructura_metodo . crear_objeto
   17                  | estructura_metodo . crear_metodo_objeto
   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' estructura_metodo . '}' RETURN ID

    ID      desplazar e ir al estado 50
    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16
    '}'     desplazar e ir al estado 51
    ','     desplazar e ir al estado 33

    tipo                 ir al estado 52
    crear_objeto         ir al estado 53
    crear_metodo_objeto  ir al estado 54
    declarar             ir al estado 55


Estado 46

   13 parametros: tipo ID ',' parametros .

    $default  reduce usando la regla 13 (parametros)


Estado 47

   12 metodo: permiso tipo ID '(' parametros . ')' '{' estructura_metodo '}' RETURN ID PUNTCOM

    ')'  desplazar e ir al estado 56


Estado 48

   35 declarar: declarar tipo ID PUNTCOM .

    $default  reduce usando la regla 35 (declarar)


Estado 49

   34 declarar: declarar tipo ID IGUAL . valor PUNTCOM

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58

    valor  ir al estado 59


Estado 50

   26 crear_metodo_objeto: ID . '.' ID '(' parametros_objeto ')'

    '.'  desplazar e ir al estado 60


Estado 51

   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' estructura_metodo '}' . RETURN ID

    RETURN  desplazar e ir al estado 61


Estado 52

   25 crear_objeto: tipo . ID IGUAL NUEVO ID '(' parametros_objeto ')' PUNTCOM

    ID  desplazar e ir al estado 62


Estado 53

   16 estructura_metodo: estructura_metodo crear_objeto .

    $default  reduce usando la regla 16 (estructura_metodo)


Estado 54

   17 estructura_metodo: estructura_metodo crear_metodo_objeto .

    $default  reduce usando la regla 17 (estructura_metodo)


Estado 55

   15 estructura_metodo: estructura_metodo declarar .
   34 declarar: declarar . tipo ID IGUAL valor PUNTCOM
   35         | declarar . tipo ID PUNTCOM

    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16

    INT       [reduce usando la regla 15 (estructura_metodo)]
    FLOAT     [reduce usando la regla 15 (estructura_metodo)]
    LONG      [reduce usando la regla 15 (estructura_metodo)]
    CHAR      [reduce usando la regla 15 (estructura_metodo)]
    STRING    [reduce usando la regla 15 (estructura_metodo)]
    BOOL      [reduce usando la regla 15 (estructura_metodo)]
    $default  reduce usando la regla 15 (estructura_metodo)

    tipo  ir al estado 40


Estado 56

   12 metodo: permiso tipo ID '(' parametros ')' . '{' estructura_metodo '}' RETURN ID PUNTCOM

    '{'  desplazar e ir al estado 63


Estado 57

   31 valor: ID .
   33      | ID . '.' ID

    '.'  desplazar e ir al estado 64

    $default  reduce usando la regla 31 (valor)


Estado 58

   32 valor: NUM .

    $default  reduce usando la regla 32 (valor)


Estado 59

   34 declarar: declarar tipo ID IGUAL valor . PUNTCOM

    PUNTCOM  desplazar e ir al estado 65


Estado 60

   26 crear_metodo_objeto: ID '.' . ID '(' parametros_objeto ')'

    ID  desplazar e ir al estado 66


Estado 61

   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' estructura_metodo '}' RETURN . ID

    ID  desplazar e ir al estado 67


Estado 62

   25 crear_objeto: tipo ID . IGUAL NUEVO ID '(' parametros_objeto ')' PUNTCOM

    IGUAL  desplazar e ir al estado 68


Estado 63

   12 metodo: permiso tipo ID '(' parametros ')' '{' . estructura_metodo '}' RETURN ID PUNTCOM

    $default  reduce usando la regla 18 (estructura_metodo)

    estructura_metodo  ir al estado 69


Estado 64

   33 valor: ID '.' . ID

    ID  desplazar e ir al estado 70


Estado 65

   34 declarar: declarar tipo ID IGUAL valor PUNTCOM .

    $default  reduce usando la regla 34 (declarar)


Estado 66

   26 crear_metodo_objeto: ID '.' ID . '(' parametros_objeto ')'

    '('  desplazar e ir al estado 71


Estado 67

   30 metodo_main: permiso tipo MAIN '(' parametros ')' '{' estructura_metodo '}' RETURN ID .

    $default  reduce usando la regla 30 (metodo_main)


Estado 68

   25 crear_objeto: tipo ID IGUAL . NUEVO ID '(' parametros_objeto ')' PUNTCOM

    NUEVO  desplazar e ir al estado 72


Estado 69

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo . '}' RETURN ID PUNTCOM
   15 estructura_metodo: estructura_metodo . declarar
   16                  | estructura_metodo . crear_objeto
   17                  | estructura_metodo . crear_metodo_objeto

    ID      desplazar e ir al estado 50
    INT     desplazar e ir al estado 11
    FLOAT   desplazar e ir al estado 12
    LONG    desplazar e ir al estado 13
    CHAR    desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    BOOL    desplazar e ir al estado 16
    '}'     desplazar e ir al estado 73
    ','     desplazar e ir al estado 33

    tipo                 ir al estado 52
    crear_objeto         ir al estado 53
    crear_metodo_objeto  ir al estado 54
    declarar             ir al estado 55


Estado 70

   33 valor: ID '.' ID .

    $default  reduce usando la regla 33 (valor)


Estado 71

   26 crear_metodo_objeto: ID '.' ID '(' . parametros_objeto ')'

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58

    $default  reduce usando la regla 29 (parametros_objeto)

    parametros_objeto  ir al estado 74
    valor              ir al estado 75


Estado 72

   25 crear_objeto: tipo ID IGUAL NUEVO . ID '(' parametros_objeto ')' PUNTCOM

    ID  desplazar e ir al estado 76


Estado 73

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo '}' . RETURN ID PUNTCOM

    RETURN  desplazar e ir al estado 77


Estado 74

   26 crear_metodo_objeto: ID '.' ID '(' parametros_objeto . ')'

    ')'  desplazar e ir al estado 78


Estado 75

   27 parametros_objeto: valor . ',' parametros_objeto
   28                  | valor .

    ','  desplazar e ir al estado 79

    $default  reduce usando la regla 28 (parametros_objeto)


Estado 76

   25 crear_objeto: tipo ID IGUAL NUEVO ID . '(' parametros_objeto ')' PUNTCOM

    '('  desplazar e ir al estado 80


Estado 77

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo '}' RETURN . ID PUNTCOM

    ID  desplazar e ir al estado 81


Estado 78

   26 crear_metodo_objeto: ID '.' ID '(' parametros_objeto ')' .

    $default  reduce usando la regla 26 (crear_metodo_objeto)


Estado 79

   27 parametros_objeto: valor ',' . parametros_objeto

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58

    $default  reduce usando la regla 29 (parametros_objeto)

    parametros_objeto  ir al estado 82
    valor              ir al estado 75


Estado 80

   25 crear_objeto: tipo ID IGUAL NUEVO ID '(' . parametros_objeto ')' PUNTCOM

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58

    $default  reduce usando la regla 29 (parametros_objeto)

    parametros_objeto  ir al estado 83
    valor              ir al estado 75


Estado 81

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo '}' RETURN ID . PUNTCOM

    PUNTCOM  desplazar e ir al estado 84


Estado 82

   27 parametros_objeto: valor ',' parametros_objeto .

    $default  reduce usando la regla 27 (parametros_objeto)


Estado 83

   25 crear_objeto: tipo ID IGUAL NUEVO ID '(' parametros_objeto . ')' PUNTCOM

    ')'  desplazar e ir al estado 85


Estado 84

   12 metodo: permiso tipo ID '(' parametros ')' '{' estructura_metodo '}' RETURN ID PUNTCOM .

    $default  reduce usando la regla 12 (metodo)


Estado 85

   25 crear_objeto: tipo ID IGUAL NUEVO ID '(' parametros_objeto ')' . PUNTCOM

    PUNTCOM  desplazar e ir al estado 86


Estado 86

   25 crear_objeto: tipo ID IGUAL NUEVO ID '(' parametros_objeto ')' PUNTCOM .

    $default  reduce usando la regla 25 (crear_objeto)
